--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,22 +13,22 @@ body {
   overflow: hidden;
 }
 
-.typped {
+.wrong {
   font-weight: bold;
   font-size: 32px;
   line-height: 37px;
   color: #484C51;
   position: absolute;
   top: 50px;
-  right: 100px;
+  left: 50%;
 }
 
-.typped-letters {
+.wrong-letters {
   font-size: 72px;
   line-height: 84px;
   max-width: 600px;
   color: #87C558;
-  text-align: center;
+  text-align: left;
 }
 
 .hangman-picture {
@@ -45,6 +45,34 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-animation: hpeAppearing 200ms ease 1 forwards;
+          animation: hpeAppearing 200ms ease 1 forwards;
+}
+
+@-webkit-keyframes hpeAppearing {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes hpeAppearing {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .hangman-picture .hook {
@@ -53,9 +81,11 @@ body {
   height: 250px;
   left: 0px;
   top: 0px;
+  -webkit-animation: none;
+          animation: none;
 }
 
-.hangman-picture .hpe-1 {
+.hangman-picture .hpe-0 {
   background-image: url("../images/man/head.png");
   width: 164px;
   height: 192px;
@@ -63,7 +93,7 @@ body {
   top: 60px;
 }
 
-.hangman-picture .hpe-2 {
+.hangman-picture .hpe-1 {
   background-image: url("../images/man/left-arm.png");
   width: 125px;
   height: 116px;
@@ -71,7 +101,7 @@ body {
   top: 250px;
 }
 
-.hangman-picture .hpe-3 {
+.hangman-picture .hpe-2 {
   background-image: url("../images/man/right-arm.png");
   width: 125px;
   height: 116px;
@@ -79,7 +109,7 @@ body {
   top: 250px;
 }
 
-.hangman-picture .hpe-4 {
+.hangman-picture .hpe-3 {
   background-image: url("../images/man/butt.png");
   width: 86px;
   height: 35px;
@@ -87,7 +117,7 @@ body {
   top: 352px;
 }
 
-.hangman-picture .hpe-5 {
+.hangman-picture .hpe-4 {
   background-image: url("../images/man/left-leg.png");
   width: 107px;
   height: 186px;
@@ -95,7 +125,7 @@ body {
   top: 354px;
 }
 
-.hangman-picture .hpe-6 {
+.hangman-picture .hpe-5 {
   background-image: url("../images/man/right-leg.png");
   width: 107px;
   height: 186px;
@@ -142,12 +172,78 @@ body {
   font-weight: bold;
 }
 
+.OFFSET {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 10;
+}
+
+.OFFSET .result {
+  width: 320px;
+  height: 220px;
+  background-color: #F3F5F2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 32px;
+}
+
+.OFFSET .result .result-text {
+  font-size: 32px;
+  font-weight: bold;
+  color: #4B6BEE;
+}
+
+.OFFSET .result .result-word {
+  color: #52545A;
+}
+
+.OFFSET .result .result-btn {
+  width: 128px;
+  height: 48px;
+  background-color: #4B6BEE;
+  color: #F3F5F2;
+  font-size: 16px;
+  border: none;
+  border-radius: 12px;
+  -webkit-transition: background-color 800ms ease;
+  transition: background-color 800ms ease;
+}
+
+.OFFSET .result .result-btn:hover {
+  cursor: pointer;
+  background-color: #87C558;
+}
+
 @media (max-width: 1200px) {
-  .typped {
+  .wrong {
     top: 24px;
-    right: 50px;
   }
-  .typped-letters {
+  .wrong-letters {
     line-height: 4rem;
   }
   .hangman-picture {
@@ -167,37 +263,37 @@ body {
     left: 0px;
     top: 0px;
   }
-  .hangman-picture .hpe-1 {
+  .hangman-picture .hpe-0 {
     width: 116px;
     height: 136px;
     left: 155px;
     top: 42px;
   }
-  .hangman-picture .hpe-2 {
+  .hangman-picture .hpe-1 {
     width: 89px;
     height: 82px;
     left: 125px;
     top: 177px;
   }
-  .hangman-picture .hpe-3 {
+  .hangman-picture .hpe-2 {
     width: 89px;
     height: 82px;
     left: 212px;
     top: 177px;
   }
-  .hangman-picture .hpe-4 {
+  .hangman-picture .hpe-3 {
     width: 61px;
     height: 25px;
     left: 183px;
     top: 248px;
   }
-  .hangman-picture .hpe-5 {
+  .hangman-picture .hpe-4 {
     width: 76px;
     height: 132px;
     left: 136px;
     top: 251px;
   }
-  .hangman-picture .hpe-6 {
+  .hangman-picture .hpe-5 {
     width: 76px;
     height: 132px;
     left: 214px;
@@ -212,10 +308,10 @@ body {
 }
 
 @media (max-width: 992px) {
-  .typped-info {
+  .wrong-info {
     font-size: 24px;
   }
-  .typped-letters {
+  .wrong-letters {
     font-size: 48px;
   }
   .game-board {
@@ -225,33 +321,25 @@ body {
 }
 
 @media (max-width: 768px) {
-  .typped {
+  .wrong {
     top: auto;
-    right: auto;
     padding: 10px;
-    width: 100%;
   }
-  .typped-letters {
-    margin-left: auto;
-    margin-right: auto;
+  .wrong-letters {
     line-height: 3rem;
-  }
-  .game {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 380px;
   }
 }
 
 @media (max-width: 576px) {
-  .typped {
+  .wrong {
+    width: 100%;
     padding: 5px;
+    left: auto;
   }
-  .typped-info {
+  .wrong-info {
     font-size: 22px;
   }
-  .typped-letters {
-    max-width: 320px;
+  .wrong-letters {
     font-size: 27px;
     line-height: 1.8rem;
   }
@@ -265,44 +353,43 @@ body {
     left: 0px;
     top: 0px;
   }
-  .hangman-picture .hpe-1 {
+  .hangman-picture .hpe-0 {
     width: 65px;
     height: 76px;
     left: 104px;
     top: 36px;
   }
-  .hangman-picture .hpe-2 {
+  .hangman-picture .hpe-1 {
     width: 49px;
     height: 46px;
     left: 88px;
     top: 111px;
   }
-  .hangman-picture .hpe-3 {
+  .hangman-picture .hpe-2 {
     width: 49px;
     height: 46px;
     left: 137px;
     top: 111px;
   }
-  .hangman-picture .hpe-4 {
+  .hangman-picture .hpe-3 {
     width: 34px;
     height: 14px;
     left: 120px;
     top: 151px;
   }
-  .hangman-picture .hpe-5 {
+  .hangman-picture .hpe-4 {
     width: 42px;
     height: 73px;
     left: 95px;
     top: 153px;
   }
-  .hangman-picture .hpe-6 {
+  .hangman-picture .hpe-5 {
     width: 42px;
     height: 73px;
     left: 137px;
     top: 153px;
   }
   .game {
-    width: 320px;
     bottom: 5px;
   }
   .game-board {
