--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -12,14 +12,14 @@ body {
     overflow: hidden;
 }
 
-.typped {
+.wrong {
     font-weight: bold;
     font-size: 32px;
     line-height: 37px;    
     color: #484C51;
     position: absolute;
     top: 50px;
-    right: 100px;
+    left: 50%;
 
     &-info {
         
@@ -30,7 +30,7 @@ body {
         line-height: 84px;
         max-width: 600px;
         color: #87C558;
-        text-align: center;
+        text-align: left;
     }
 }
 
@@ -46,6 +46,19 @@ body {
         position: absolute;
         width: 100%;
         height: 100%;
+        animation: hpeAppearing 200ms ease 1 forwards;
+    }
+
+    @keyframes hpeAppearing {
+        0% {
+            transform: scale(.5);
+            opacity: 0;
+        }
+
+        100% {
+            transform: scale(1);
+            opacity: 1;
+        }
     }
 
     .hook {
@@ -54,9 +67,10 @@ body {
         height: 250px;
         left: 0px;
         top: 0px;
+        animation: none;
     }
 
-    .hpe-1 {
+    .hpe-0 {
         background-image: url('../images/man/head.png');
         width: 164px;
         height: 192px;
@@ -64,7 +78,7 @@ body {
         top: 60px;
     }
 
-    .hpe-2 {
+    .hpe-1 {
         background-image: url('../images/man/left-arm.png');
         width: 125px;
         height: 116px;
@@ -73,7 +87,7 @@ body {
         
     }
 
-    .hpe-3 {
+    .hpe-2 {
         background-image: url('../images/man/right-arm.png');
         width: 125px;
         height: 116px;
@@ -81,7 +95,7 @@ body {
         top: 250px;
     }
 
-    .hpe-4 {
+    .hpe-3 {
         background-image: url('../images/man/butt.png');
         width: 86px;
         height: 35px;
@@ -89,7 +103,7 @@ body {
         top: 352px;
     }
 
-    .hpe-5 {
+    .hpe-4 {
         background-image: url('../images/man/left-leg.png');
         width: 107px;
         height: 186px;
@@ -97,7 +111,7 @@ body {
         top: 354px;
     }
 
-    .hpe-6 {
+    .hpe-5 {
         background-image: url('../images/man/right-leg.png');
         width: 107px;
         height: 186px;
@@ -134,10 +148,60 @@ body {
     }
 }
 
+.OFFSET {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+
+    .result {
+        width: 320px;
+        height: 220px;
+        background-color: #F3F5F2;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 32px;
+
+        .result-text {
+            font-size: 32px;
+            font-weight: bold;
+            color: #4B6BEE;
+        }
+
+        .result-word {
+            color: #52545A;
+        }
+
+        .result-btn {
+            width: 128px;
+            height: 48px;
+            background-color: #4B6BEE;
+            color: #F3F5F2;
+            font-size: 16px;
+            border: none;
+            border-radius: 12px;
+            transition: background-color 800ms ease;
+
+            &:hover {
+                cursor: pointer;
+                background-color: #87C558;
+            }
+        }
+    }
+}
+
 @media (max-width: 1200px) {
-    .typped {
+    .wrong {
         top: 24px;
-        right: 50px;
     
         &-info {
             
@@ -167,42 +231,42 @@ body {
             top: 0px;
         }
     
-        .hpe-1 {
+        .hpe-0 {
             width: 116px;
             height: 136px;
             left: 155px;
             top: 42px;
         }
     
-        .hpe-2 {
+        .hpe-1 {
             width: 89px;
             height: 82px;
             left: 125px;
             top: 177px;
         }
     
-        .hpe-3 {
+        .hpe-2 {
             width: 89px;
             height: 82px;
             left: 212px;
             top: 177px;
         }
     
-        .hpe-4 {
+        .hpe-3 {
             width: 61px;
             height: 25px;
             left: 183px;
             top: 248px;
         }
     
-        .hpe-5 {
+        .hpe-4 {
             width: 76px;
             height: 132px;
             left: 136px;
             top: 251px;
         }
     
-        .hpe-6 {
+        .hpe-5 {
             width: 76px;
             height: 132px;
             left: 214px;
@@ -221,7 +285,7 @@ body {
 }
 
 @media (max-width: 992px) {
-    .typped {
+    .wrong {
         &-info {
             font-size: 24px;
         }
@@ -240,67 +304,30 @@ body {
 }
 
 @media (max-width: 768px) {
-    .typped {
+    .wrong {
         top: auto;
-        right: auto;
         padding: 10px;
-        width: 100%;
     
         &-info {
         }
         
         &-letters {
-            margin-left: auto;
-            margin-right: auto;
             line-height: 3rem;
-        }
-    }
-    
-    .hangman-picture {
-
-        .hpe {
-        }
-
-        .hook {
-        }
-    
-        .hpe-1 {
-        }
-    
-        .hpe-2 {
-        }
-    
-        .hpe-3 {
-        }
-    
-        .hpe-4 {
-        }
-    
-        .hpe-5 {
-        }
-    
-        .hpe-6 {
-        }
-    }
-
-    .game {
-        flex-wrap: wrap;
-        width: 380px;
-        &-board {
         }
     }
 }
 
 @media (max-width: 576px) {
-    .typped {
+    .wrong {
+        width: 100%;
         padding: 5px;
+        left: auto;
     
         &-info {
             font-size: 22px;
         }
         
         &-letters {
-            max-width: 320px;
             font-size: 27px;
             line-height: 1.8rem;
         }
@@ -320,42 +347,42 @@ body {
             top: 0px;
         }
     
-        .hpe-1 {
+        .hpe-0 {
             width: 65px;
             height: 76px;
             left: 104px;
             top: 36px;
         }
     
-        .hpe-2 {
+        .hpe-1 {
             width: 49px;
             height: 46px;
             left: 88px;
             top: 111px;
         }
     
-        .hpe-3 {
+        .hpe-2 {
             width: 49px;
             height: 46px;
             left: 137px;
             top: 111px;
         }
     
-        .hpe-4 {
+        .hpe-3 {
             width: 34px;
             height: 14px;
             left: 120px;
             top: 151px;
         }
     
-        .hpe-5 {
+        .hpe-4 {
             width: 42px;
             height: 73px;
             left: 95px;
             top: 153px;
         }
     
-        .hpe-6 {
+        .hpe-5 {
             width: 42px;
             height: 73px;
             left: 137px;
@@ -364,7 +391,6 @@ body {
     }
 
     .game {
-        width: 320px;
         bottom: 5px;
         &-board {
             width: 58px;
